# CPRNDMPQuantscanner

./: .gitignore  README.md  fetch_live_data.py  generate_mock_data.py  local_scheduler.py  pyproject.toml  run_scanner.py  status.py
benchmarks/: benchmark_scanner.py
ndmp_core/: __init__.py
ndmp_core/src/: __init__.py  config.py  data_quality.py  decision_journal.py  exceptions.py  explainability.py  fyers_auth.py  fyers_oi_poller.py  ranking_engine.py  scanner_engine.py  schemas.py  symbol_master.py  trading_calendar.py
ndmp_knowledge/architecture_decisions/: ADR-001-cpr-as-layer1-foundation.md  ADR-002-basefeature-contract-and-schemas.md  ADR-003-simplified-governance-metrics-scope.md  README.md
ndmp_research/: feature_registry.py
ndmp_research/features/: base_feature.py  cpr_feature.py  oi_feature.py  rs_feature.py  vwap_feature.py
ndmp_research/registry/: CPRFeature.yaml  IntradayOIFeature.yaml  RelativeStrengthFeature.yaml  VWAPFeature.yaml
ndmp_validation/: __init__.py  dashboard.py  gates.py  governance_reporter.py  release_manager.py  validation_engine.py  weekly_review_generator.py
tests/: test_data_platform.py  test_feature_store.py  test_fyers_oi_poller.py  test_golden_regression.py  test_multi_regime_regression.py
